Started removing Lunar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ project(lxgui)
 
 # setup version numbers
 set(VERSION_MAJOR 1)
-set(VERSION_MINOR 2)
+set(VERSION_MINOR 3)
 
 # check compiler version for C++11 features
 if(CMAKE_COMPILER_IS_GNUCXX)
@@ -36,38 +36,23 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     list(GET GCC_VERSION_COMPONENTS 1 GCC_MINOR)
     set(GCC_VERSION ${GCC_MAJOR}.${GCC_MINOR})
 
-    if(GCC_VERSION VERSION_EQUAL 4.6)
-        message(STATUS "gcc version >= 4.6 (${GCC_VERSION})")
-        add_definitions(-std=c++0x)
-    elseif(GCC_VERSION VERSION_GREATER 4.6)
-        message(STATUS "gcc version >= 4.6 (${GCC_VERSION})")
-        add_definitions(-std=c++11)
-    else()
-        message(ERROR ": lxgui requires advanced features from the C++11 norm that are only available with gcc 4.6 or higher (your version: ${GCC_VERSION}). Please upgrade your compiler.")
+    if(GCC_VERSION VERSION_LESS 7)
+        message(ERROR ": lxgui requires advanced features from the C++17 norm that are only available with gcc 4.6 or higher (your version: ${GCC_VERSION}). Please upgrade your compiler.")
     endif()
+    add_definitions(-std=c++17)
 elseif(MSVC)
+    if(NOT (MSVC_VERSION VERSION_LESS 1920))
+        message(ERROR ": lxgui requires advanced features from the C++17 norm that are only available with Visual Studio 2019 or higher (your version: ${MSVC_VERSION}). Please upgrade your compiler.")
+    endif()
+
     add_definitions(/DMSVC)
     add_definitions(/W4)
     add_definitions(/GR)
     add_definitions(/EHs)
-
-    add_definitions(/DNO_CPP11_EXPLICIT_CONV)
-    add_definitions(/DNO_CPP11_DELETE_FUNCTION)
-    add_definitions(/DNO_CPP11_FUNCTION_TEMPLATE_DEFAULT)
-    add_definitions(/DNO_CPP11_CONSTEXPR)
-    add_definitions(/DNO_CPP11_UNICODE_LITTERAL)
     add_definitions(/D_CRT_SECURE_NO_DEPRECATE)
-
-    if(NOT (MSVC_VERSION VERSION_LESS 1600))
-        message(STATUS "Using MSVC 2010: some C++11 features are not supported by this compiler. Workarounds are used but never perfectly mimic the C++11 code.")
-    else()
-        message(ERROR ": lxgui requires advanced features from the C++11 norm that are only available with MSVC 2010 or higher (your version: ${MSVC_VERSION}). Please upgrade your compiler.")
-    endif()
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 2.99)
-        message(STATUS "clang version >= 3.0 (${CMAKE_CXX_COMPILER_VERSION})")
-    else()
-        message(ERROR ": lxgui requires advanced features from the C++11 norm that are only available with clang 3.0 or higher (your version: ${CMAKE_CXX_COMPILER_VERSION}). Please upgrade your compiler.")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5)
+        message(ERROR ": lxgui requires advanced features from the C++17 norm that are only available with clang 5.0 or higher (your version: ${CMAKE_CXX_COMPILER_VERSION}). Please upgrade your compiler.")
     endif()
 
     add_definitions(-Weverything)
@@ -90,7 +75,7 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     add_definitions(-Wno-unused-function)
     add_definitions(-Wno-unused-macros)
     add_definitions(-Wno-switch-enum)
-    add_definitions(-std=c++11)
+    add_definitions(-std=c++17)
 else()
     message(WARNING "Warning: your compiler has not been setup by the CMake script, do not expect it to work")
 endif()
@@ -105,7 +90,7 @@ endif()
 
 # find libraries
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
-find_package(Lua51 REQUIRED)
+find_package(Lua REQUIRED)
 find_package(Freetype)
 find_package(PNG)
 find_package(ZLIB)
@@ -126,7 +111,7 @@ if(LXGUI_BUILD_GUI_GL_IMPL)
     if(OPENGL_FOUND AND GLEW_FOUND AND FREETYPE_FOUND AND PNG_FOUND AND ZLIB_FOUND)
         add_subdirectory(gui/impl/gui/gl)
     else()
-        message(ERROR ": the OpenGL implementation of the GUI requires OpenGL, GLEW, freetype, libpng and zlib")
+        message(ERROR ": the OpenGL implementation of the GUI requires OpenGL, GLEW, freetype, libpng and zlib (set -DLXGUI_BUILD_GUI_GL_IMPL=0 to disable it)")
         set(LXGUI_BUILD_GUI_GL_IMPL FALSE)
     endif()
 endif()
@@ -134,7 +119,7 @@ if(LXGUI_BUILD_INPUT_GLFW_IMPL)
     if(GLFW_FOUND)
         add_subdirectory(gui/impl/input/glfw)
     else()
-        message(ERROR ": the GLFW implementation of the input requires the GLFW library")
+        message(ERROR ": the GLFW implementation of the input requires the GLFW library (set -DLXGUI_BUILD_INPUT_GLFW_IMPL=0 to disable it)")
         set(LXGUI_BUILD_INPUT_GLFW_IMPL FALSE)
     endif()
 endif()
@@ -142,7 +127,7 @@ if(LXGUI_BUILD_INPUT_SFML_IMPL)
     if(SFML_FOUND)
         add_subdirectory(gui/impl/input/sfml)
     else()
-        message(ERROR ": the SFML implementation of the input requires the SFML library")
+        message(ERROR ": the SFML implementation of the input requires the SFML library (set -DLXGUI_BUILD_INPUT_SFML_IMPL=0 to disable it)")
         set(LXGUI_BUILD_INPUT_SFML_IMPL FALSE)
     endif()
 endif()
@@ -150,7 +135,7 @@ if(LXGUI_BUILD_INPUT_OIS_IMPL)
     if(OIS_FOUND)
         add_subdirectory(gui/impl/input/ois)
     else()
-        message(ERROR ": the OIS implementation of the input requires the OIS library")
+        message(ERROR ": the OIS implementation of the input requires the OIS library (set -DLXGUI_BUILD_INPUT_OIS_IMPL=0 to disable it)")
         set(LXGUI_BUILD_INPUT_OIS_IMPL FALSE)
     endif()
 endif()
@@ -158,7 +143,7 @@ if(LXGUI_BUILD_TEST)
     if(OPENGL_FOUND AND GLEW_FOUND AND FREETYPE_FOUND AND PNG_FOUND AND ZLIB_FOUND AND SFML_FOUND)
         add_subdirectory(gui/test)
     else()
-        message(ERROR ": the test program requires OpenGL, GLEW, freetype, libpng, zlib and SFML.")
+        message(ERROR ": the test program requires OpenGL, GLEW, freetype, libpng, zlib and SFML (set -DLXGUI_BUILD_TEST=0 to disable it).")
     endif()
 endif()
 
