--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 build
 build_wasm
 gui/bin/lxgui-test*
-gui/bin/cout.txt
-gui/bin/gui.txt
+gui/test/bin/cout.txt
+gui/test/bin/gui.txt
 gui/doc/html
 gui/doc/lua
 gui/doc/*.log
